# safaribooks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  exceptions.py  logger.py  pyproject.toml  retrieve_cookies.py  safaribooks.py
.github/workflows/: ci.yml
src/safaribooks/cli/: __init__.py  commands.py
src/safaribooks/client/: __init__.py  http.py
src/safaribooks/display/: __init__.py  constants.py  rich_display.py  rich_logger.py
src/safaribooks/epub/: __init__.py  builder.py
src/safaribooks/epub/templates/: content.opf.j2  nav.xhtml.j2  toc.ncx.j2
src/safaribooks/models/: __init__.py  book.py  chapter.py  config.py
src/safaribooks/parser/: __init__.py  html.py
tests/: conftest.py  test_epub3.py  test_index_terms.py
tests/integration/: __init__.py  test_feature_flag.py
tests/unit/: test_cli.py  test_display.py  test_epub_builder.py  test_epub_creation.py  test_html_parser.py  test_http_client.py  test_logger.py  test_parser.py  test_rich_display.py  test_safaribooks_methods.py  test_templates.py
