[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "safaribooks"
version = "2.0.0-alpha.1"
description = "Download and generate EPUB files from O'Reilly Safari Books Online"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lorenzo Di Fuccia"},
    {name = "Willian Paixao", email = "willian@paixao.net"},
]
keywords = ["oreilly", "safari", "books", "epub", "downloader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "beautifulsoup4>=4.14.3,<5.0.0",
    "lxml>=6.0.2,<7.0.0",
    "requests>=2.32.5,<3.0.0",
]

[project.optional-dependencies]
development = [
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",  # Parallel test execution
    "pytest-mock>=3.15.1",  # Mocking support
    "responses>=0.25.8",    # HTTP request mocking
    "pre-commit>=4.5.1",
]

future = [
    "httpx>=0.28.1",      # Modern async HTTP client
    "pydantic>=2.12.5",    # Data validation
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",       # Beautiful terminal output
    "click>=8.3.1",       # Modern CLI framework
    "jinja2>=3.1.6",      # Template engine for EPUB
    "tenacity>=9.1.2",    # Retry logic
]

[project.urls]
Homepage = "https://github.com/lorenzodifuccia/safaribooks"
Repository = "https://github.com/lorenzodifuccia/safaribooks"
Issues = "https://github.com/lorenzodifuccia/safaribooks/issues"

[project.scripts]
safaribooks = "safaribooks:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments (will fix in Phase 3)
    "PLR2004",  # Magic values (will fix in Phase 3)
    "T201",     # print() allowed for now (will remove in Phase 3)
    "ERA001",   # Commented code allowed during refactoring
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic value
    "S101",     # Use of assert
    "ARG",      # Unused arguments (fixtures)
    "PLR0913",  # Too many arguments
]

"safaribooks.py" = [
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "C901",     # Too complex
]

[tool.ruff.lint.isort]
known-first-party = ["safaribooks"]
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 15  # Will reduce to 10 in Phase 3

[tool.ruff.format]
line-ending = "lf"  # Enforce Unix line endings for consistency

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "lxml.*",
    "browser_cookie3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",              # Show summary of all test outcomes
    "--strict-markers", # Raise error on unknown markers
    "--strict-config",  # Raise error on config issues
    "--showlocals",     # Show local variables in tracebacks
    "-v",               # Verbose output
]

# Coverage options (will enable in Phase 1)
# addopts = [
#     "--cov=safaribooks",
#     "--cov-report=term-missing",
#     "--cov-report=html",
#     "--cov-report=xml",
#     "--cov-fail-under=60",  # Start with 60%, increase to 80%
# ]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["safaribooks"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.wheel]
packages = ["safaribooks.py", "logger.py", "retrieve_cookies.py"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/Books",
  "/specs",
  "/dist",
  "/build",
  "*.egg-info",
]
